Partial fix header spacing

--- a/style.css
+++ b/style.css
@@ -21,13 +21,22 @@ body {
     justify-content: space-between;
     /* margin-bottom: 16px; */
     max-width: 1000px;
-    align-self: center;
     min-width: 750px;
+    width: 100%;
+    align-self: center;
+    padding: 0 24px;
+    margin: 0 auto;
 
 }
 .header-logo {
     font-size: 24px;
     font-weight: 900;
+    
+}
+.nav-links {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1;
 }
 ul {
     display: flex;
